OD-10220 attendance tab loading improvement, refactoring