@@ -26,6 +26,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.17'
 	testCompile 'org.apache.poi:poi:3.12-beta1'
 	testCompile 'org.apache.poi:poi-ooxml:3.12-beta1'
+	testCompile group: 'com.github.javafaker', name: 'javafaker', version: '0.13'
 	testCompile project(':server')
 }
 
@@ -67,7 +68,6 @@ appBundler {
                   "-DJFileChooser.packageIsTraversable=true",
                   "-Dapple.awt.antialiasing=true",
                   "-Dapple.awt.showGrowBox=true",
-				  "-Djava.locale.providers=COMPAT,SPI",
                   "-Xmx${project.maxmemoryClient}"]
 }
 
